# fastapi_async_example

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
sv1/: server.py
sv2/: server.py
