[tool.poetry]
name = "asynctest"
version = "0.1.0"
description = ""
authors = ["Mori Masakazu <38371671+marisakamozz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = "^1.9.1"
python-json-logger = "^2.0.2"
requests = "^2.27.1"
aiohttp = "^3.8.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
